add readme and dependency
git-svn-id: http://5thplane.com/svn/perl/Test-Mock-LWP@191 e5f7e8ef-ac07-0410-9fef-9965b2c2b5fc

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,6 @@
 author: Luke Closs <test-mock-lwp@awesnob.com>
 build_requires: 
   Test::More: 0.42
-  Test::Pod: 0
 distribution_type: module
 generated_by: Module::Install version 0.64
 license: perl
@@ -10,3 +9,5 @@ no_index:
   directory: 
     - inc
     - t
+requires: 
+  Test::MockObject: 0
