--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,13 @@
+--- 
 author: Luke Closs <test-mock-lwp@awesnob.com>
 build_requires: 
   Test::More: 0.42
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.67
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: Test-Mock-LWP
 no_index: 
   directory: 
