--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,24 @@
---- 
-author: Luke Closs <test-mock-lwp@awesnob.com>
-build_requires: 
-  Test::More: 0.42
+---
+abstract: ~
+author:
+  - 'Luke Closs <test-mock-lwp@awesnob.com>'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
 distribution_type: module
-generated_by: Module::Install version 0.67
-license: perl
-meta-spec: 
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+dynamic_config: 0
+generated_by: 'ExtUtils::MakeMaker version 6.57_05'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: Test-Mock-LWP
-no_index: 
-  directory: 
-    - inc
+no_index:
+  directory:
     - t
-requires: 
+    - inc
+requires:
   Test::MockObject: 1.08
+  Test::More: 0.42
+version: 0.05
